ghostblog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: ghostblog
  labels:
    app: ghostblog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghostblog
  template:
    metadata:
      labels:
        app: ghostblog
    spec:
      containers:
      - name: ghost
        image: ghost:2.6-alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 2368
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: ghostblog-volume
      volumes:
      - name: ghostblog-volume
        persistentVolumeClaim:
          claimName: ghostblog-volume
