ghostblog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghostblog
  namespace: ghostblog
spec:
  selector:
    app: ghostblog
  ports:
  - port: 80
    name: http
    targetPort: 2368
    protocol: TCP
  - port: 443
    name: https
    targetPort: 2368
    protocol: TCP
